--- a/src/webparts/projectPulse/components/ProjectPulse.module.scss
+++ b/src/webparts/projectPulse/components/ProjectPulse.module.scss
@@ -33,6 +33,56 @@
   vertical-align: middle;
 }
 
+.thermometerContainer {
+  height:250px;
+}
+
+.thermometer{
+    margin:50% 0 0 50%;
+    left:-15px;
+    top:-100px;
+    width:22px;
+    height:150px;
+    display:block;
+    text-indent: 36px;
+    background: -webkit-linear-gradient(top, #fff 0%, #fff 50%, #db3f02 50%, #db3f02 100%);
+    border-radius:22px 22px 0 0;
+    border:5px solid #4a1c03;
+    border-bottom:none;
+    position:absolute;
+   /* box-shadow:inset 0 0 0 4px #fff;*/
+    /*color:#4a1c03;*/
+    
+}
+
+/* Thermometer Bulb */
+.thermometer:before{
+    content:' ';
+    width:44px;
+    height:44px;
+    display:block;
+    position:absolute;
+    top:142px;
+    left:-16px;
+    /*  z-index:-1;  Place the bulb under the column */
+    background:#db3f02;
+    border-radius:44px;
+    border:5px solid #4a1c03;
+    /*box-shadow:inset 0 0 0 4px #fff;*/
+}
+
+/* This piece here connects the column with the bulb */
+.thermometer:after{
+    content:' ';
+    width: 22px;
+    height: 10px;
+    display:block;
+    position:absolute;
+    top: 140px;
+    /* left: 4px; */
+    background:#db3f02;
+}
+
   .button {
     // Our button
     text-decoration: none;
